add content to front page, projects page

--- a/webapp/projects/index.html
+++ b/webapp/projects/index.html
@@ -17,10 +17,9 @@
 		</nav>
 	</header>
 	<section id="content">
-		<h2>Who am I?</h2>
-		<p>I am an aspiring software developer with an interest in video games.</p>
-		<h2>What is this?</h2>
-		<p>This is just a website where I write down random thoughts and show things I create.</p>
+		<h2>Personal Website</h2>
+		<p><span>Github Repo: </span><a href="http://github.com/JoshuaCoquia/personalwebsite"><span title="Go to Github Repo">JoshuaCoquia/personalwebsite</span></a></p>
+		<p>This is my personal website.</p>
 	</section>
 </body>
 
