Add content to website

--- a/webapp/blogs/index.html
+++ b/webapp/blogs/index.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="description" content="The projects of an aspiring web developer." />
-	<title>Projects - Joshua Coquia</title>
+	<meta name="description" content="The blogs of an aspiring web developer." />
+	<title>Blogs - Joshua Coquia's Website</title>
 	<link rel="stylesheet" href="/styles.css" />
 	<script type="module" src="/src/script.ts"></script>
 </head>
@@ -21,16 +21,16 @@
 		</nav>
 	</header>
 	<section class="content">
-		<h2 id="Projects">Projects</h2>
-		<p>List of Projects:</p>
-		<ol>
-			<p><a href="#Personal%20Website">Personal Website</a></p>
-		</ol>
-		<section>
-			<h3 id="Personal%20Website">Personal Website</h3>
-			<p><span>Github Repo: </span><a href="https://github.com/JoshuaCoquia/personalwebsite/"><span>https://github.com/JoshuaCoquia/personalwebsite/</span></a></p>
-			<p>This is my personal website.</p>
-		</section>
+		<h2 id="Blogs">Blogs</h2>
+		<p>I currently do not have any completed blogs. Come back later to see a blog!</p>
+		<!-- TODO: complete first blog
+			<section>
+				<a href="/blogs/beginning/">
+					<h3 id="Beginning">Beginning</h3>
+					<small>In this blog, I write about beginning my website.</small>
+				</a>
+			</section>
+		 -->
 	</section>
 	<footer>
 		<p>Thank you for visiting my website!</p>
