--- a/webapp/projects/index.html
+++ b/webapp/projects/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8" />
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="description" content="The projects of an aspiring web developer." />
 	<title>Projects - Joshua Coquia</title>
@@ -24,7 +24,7 @@
 		<h2 id="Projects">Projects</h2>
 		<p>List of Projects:</p>
 		<ol>
-			<p><a href="#Personal%20Website">Personal Website</a></p>
+			<li><p><a href="#Personal%20Website">Personal Website</a></p></li>
 		</ol>
 		<section>
 			<h3 id="Personal%20Website">Personal Website</h3>
