--- a/webapp/blogs/beginning/index.html
+++ b/webapp/blogs/beginning/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8" />
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="description" content="In this blog, I write about beginning my website." />
 	<title>Blog: Beginning - Joshua Coquia's Website</title>
