--- a/webapp/blogs/index.html
+++ b/webapp/blogs/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8" />
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="description" content="The blogs of an aspiring web developer." />
 	<title>Blogs - Joshua Coquia's Website</title>
